# health-plan-comparison

./: Benefits Grid Summaries.csv  Benefits Grid.csv  GPT35_Extraction.ipynb  GPT35_Summarization.ipynb  GPT_Sample.ipynb  OCR_and_Preprocessing.ipynb  README.md  SVM_Model.ipynb  Target_EDA.ipynb  bart.ipynb  bart_large_cnn.ipynb  bart_large_cnn_gc.ipynb  bleu.ipynb  dataset  doc.txt  gpt_cos_sim_score.csv  llama.ipynb  llama2.ipynb  naive_bayes.ipynb  parse_pdf.ipynb  pyproject.toml  summaries.csv  summary_examples.csv  summary_scores.ipynb  test_vbid_df.pkl  text_preprocessing.ipynb
db/: chroma.sqlite3
