[tool.poetry]
name = "packages"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
nltk = "^3.8.1"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
pymupdf = "^1.23.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
