[tool.poetry]
name = "packages"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
nltk = "^3.8.1"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
pymupdf = "^1.23.4"
scikit-learn = "^1.3.1"
mlxtend = "^0.23.0"
shap = "^0.43.0"
lime = "^0.2.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
