[tool.poetry]
name = "packages"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
nltk = "^3.8.1"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
pymupdf = "^1.23.4"
scikit-learn = "^1.3.1"
mlxtend = "^0.23.0"
shap = "^0.43.0"
lime = "^0.2.0.1"
pypdf2 = "^3.0.1"
pdfminer-six = "^20221105"
pdfplumber = "^0.10.3"
pdf2image = "^1.16.3"
pillow = "^10.1.0"
pytesseract = "^0.3.10"
langchain = "^0.0.344"
sentence-transformers = "^2.2.2"
faiss-cpu = "^1.7.4"
ctransformers = "^0.2.27"
setuptools = "^69.0.2"
wheel = "^0.42.0"
chromadb = "^0.4.18"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
